# project-medicare

./: 20250922_0000-add_roles_and_patients.py  README.md  alembic.ini  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml  script.py.mako
.github/: copilot-instructions.md
.github/instructions/: be-project-structure.instructions.md  project-structure.instructions.md
alembic/: env.py  script.py.mako
alembic/versions/: 0001_create_users_table.py  0002_alter_users_id_to_uuid.py  20250921_1523-fe48c48c62f9_initial_migration.py
app/: main.py
app/core/: config.py  db.py  security.py
app/internal/: __init__.py  admin.py
app/modules/: __init__.py
app/routers/: users.py
apps/backend/: .env.example  Dockerfile  README.md  env.py  pyproject.toml
apps/backend/alembic/: env.py  script.py.mako
apps/backend/alembic/versions/: 20250923_1033-d6757ec65852_add_roles_and_patients.py
apps/backend/app/: main.py  seed_superadmin.py
apps/backend/app/api/: __init__.py  router.py
apps/backend/app/core/: __init__.py  auth_middleware.py  config.py  db.py  jwt_validator.py  types.py  utils.py
apps/backend/app/modules/auth/: rbac.py
apps/backend/app/modules/patients/: __init__.py  dto.py  models.py  router.py  service.py
apps/backend/app/modules/users/: __init__.py  dto.py  models.py  router.py  service.py
docker/: docker-compose-all.dev.yml  docker-compose-env.dev.yml
docs/: features.md  overview.md
docs/tasks/: 00_ALL_TASKS.csv  01_ModularizeApp_TASKS.csv  02_DockerComposeServices_TASKS.csv  (+2 more)
scripts/: post-install-script.sh
(+9 files in other folders)
