[project]
name = "project-medicare"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.2",
    "sqlalchemy>=2.0.30",
    "psycopg[binary]>=3.1",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "alembic>=1.13.2",
]
