[project]
name = "project-medicare"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12"
dependencies = [
    "fastapi[standard]>=0.116.2",
    "sqlalchemy[asyncio]==2.0.43",
    "python-jose[cryptography]>=3.3.0",
    "alembic>=1.13.2",
    "alembic-postgresql-enum>=1.8.0",
    "asyncpg>=0.30.0",
    "tzdata>=2025.2",
    "argon2-cffi>=25.1.0",
    "passlib>=1.7.4",
]
